<resources>
    <string name="action_answer">Answer</string>
    <string name="action_decline">Decline</string>
    <string name="action_hangup">Hang up</string>
    <string name="app_name" translatable="false">AiPBX</string>
    <string name="battery_optimization_desc">Turn off battery saving restrictions so incoming calls ring without delay.</string>
    <string name="battery_optimization_title">Battery Saver</string>
    <string name="btn_answer">Answer</string>
    <string name="btn_call">Call</string>
    <string name="btn_change_server">Change Server</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_hangup">Hang up</string>
    <string name="btn_hide_keypad">Hide</string>
    <string name="btn_hold">Hold</string>
    <string name="btn_keypad">Keypad</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_mute">Mute</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_speaker">Speaker</string>
    <string name="btn_test_and_continue">Connect</string>
    <string name="btn_transfer">Transfer</string>
    <string name="call_connecting">Connecting...</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_missed_status">Missed</string>
    <string name="call_ongoing">In call</string>
    <string name="call_ringing">Ringing...</string>
    <string name="date_today">Today %s</string>
    <string name="date_yesterday">Yesterday %s</string>
    <string name="default_brand_sub">Smart IP PBX</string>
    <string name="dialer_hint">Enter a number or extension</string>
    <string name="err_connection_failed">Could not reach the server. Please check the address.</string>
    <string name="err_invalid_url">Please enter a valid http:// or https:// address.</string>
    <string name="features_btn_clear">Clear</string>
    <string name="features_btn_save">Save</string>
    <string name="features_cf_always_desc">All incoming calls go straight to this number.</string>
    <string name="features_cf_always_title">1. Always</string>
    <string name="features_cf_busy_desc">Forwarded when your extension is busy or the call is declined.</string>
    <string name="features_cf_busy_title">2. When busy</string>
    <string name="features_cf_hint">Extension or phone (e.g. 1005 / +44...)</string>
    <string name="features_cf_noanswer_desc">Forwarded when the call is not answered within the set time.</string>
    <string name="features_cf_noanswer_title">3. No answer</string>
    <string name="features_cf_subtitle">Forward calls to another extension or line</string>
    <string name="features_cf_timeout_hint">Time</string>
    <string name="features_cf_title">Call Forwarding</string>
    <string name="features_system_info_title">System Info</string>
    <string name="features_title">PBX</string>
    <string name="incoming_call_title">Incoming Call</string>
    <string name="login_subtitle">Your PBX username or extension number</string>
    <string name="login_title">Sign In</string>
    <string name="menu_logout">Sign Out</string>
    <string name="menu_settings">Settings</string>
    <string name="msg_logging_in">Signing in...</string>
    <string name="msg_testing_connection">Connecting to the server...</string>
    <string name="notif_call_active_desc">Active call: %s</string>
    <string name="notif_call_active_title">AiPBX - In Call</string>
    <string name="notif_call_calling_desc">Calling %s...</string>
    <string name="notif_call_calling_title">AiPBX - Calling...</string>
    <string name="notif_call_incoming_desc">%s is calling...</string>
    <string name="notif_call_incoming_title">AiPBX - Incoming Call</string>
    <string name="notif_call_on_hold_desc">Call on hold: %s</string>
    <string name="notif_call_on_hold_title">AiPBX - On Hold</string>
    <string name="notif_channel_calls">Incoming Calls</string>
    <string name="notif_channel_chat">Chat and Messages</string>
    <string name="notif_channel_service">PBX Background Connection</string>
    <string name="notif_incoming_call_desc">Extension: %s</string>
    <string name="notif_incoming_call_title">INCOMING CALL: %s</string>
    <string name="notif_service_text">Extension: %1$s (%2$s) - waiting for calls</string>
    <string name="notif_service_title">PBX Connection Active</string>
    <string name="password_hint">Password</string>
    <string name="privacy_policy_url" translatable="false">https://www.mhrgl.com/privacy</string>
    <string name="server_setup_subtitle">Enter the address of the AI PBX server you want to connect to.</string>
    <string name="server_setup_title">Server Address</string>
    <string name="server_url_hint">e.g. https://pbx.example.com</string>
    <string name="status_connected">ONLINE</string>
    <string name="status_connecting">CONNECTING...</string>
    <string name="status_disconnected">OFFLINE</string>
    <string name="transfer_dialog_msg">Enter the extension to transfer to:</string>
    <string name="transfer_dialog_title">Transfer Call</string>
    <string name="transfer_in_progress">Transferring the call to %s...</string>
    <string name="unknown_number">Unknown Number</string>
    <string name="username_hint">Username or extension (e.g. 19000)</string>
    <string name="add_members_title">Add Members to Group</string>
    <string name="api_chat_create_failed">Could not create the chat (HTTP %1$s)</string>
    <string name="api_chats_failed">Could not get chats (HTTP %1$s)</string>
    <string name="api_contacts_failed">Could not get contacts (HTTP %1$s)</string>
    <string name="api_features_failed">Could not get features (HTTP %1$s)</string>
    <string name="api_google_failed">Google sign-in failed (HTTP %1$s)</string>
    <string name="api_group_create_failed">Could not create the group (HTTP %1$s)</string>
    <string name="api_group_details_failed">Could not get group details (HTTP %1$s)</string>
    <string name="api_group_update_failed">Could not update the group (HTTP %1$s)</string>
    <string name="api_history_failed">Could not get call history (HTTP %1$s)</string>
    <string name="api_invalid_response">Invalid server response</string>
    <string name="api_leave_failed">Could not leave the group (HTTP %1$s)</string>
    <string name="api_login_failed">Sign-in failed (HTTP %1$s)</string>
    <string name="api_member_remove_failed">Could not remove the member (HTTP %1$s)</string>
    <string name="api_members_add_failed">Could not add members (HTTP %1$s)</string>
    <string name="api_messages_failed">Could not get messages (HTTP %1$s)</string>
    <string name="api_no_response">HTTP %1$s: the server did not respond</string>
    <string name="api_otp_required">Verification code required.</string>
    <string name="api_qr_failed">QR code sign-in failed (HTTP %1$s)</string>
    <string name="api_role_failed">Could not change the role (HTTP %1$s)</string>
    <string name="api_settings_failed">Could not update settings (HTTP %1$s)</string>
    <string name="api_token_failed">Token refresh failed (HTTP %1$s)</string>
    <string name="api_upload_failed">Could not upload the file (HTTP %1$s)</string>
    <string name="app_version_info">App: v%1$s (Build %2$s)</string>
    <string name="app_version_short">AiPBX v%1$s (Build %2$s)</string>
    <string name="battery_opt_msg">To avoid missing calls while the screen is off, make sure the app is exempt from battery saving (Unrestricted / Not optimized).</string>
    <string name="battery_opt_title">Battery Optimization Settings</string>
    <string name="bg_restricted_msg">Your device may have put the app to sleep in the background while the screen is off. To avoid missing calls, please turn off battery and background restrictions.</string>
    <string name="bg_restricted_title">Background Activity Restricted!</string>
    <string name="btn_add_members">Add Members</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_dismiss">Cancel</string>
    <string name="btn_edit_settings">Edit Settings</string>
    <string name="btn_leave">Leave</string>
    <string name="btn_login_short">Sign in</string>
    <string name="btn_logout">Sign out</string>
    <string name="btn_ok">OK</string>
    <string name="btn_open_settings">Open Settings</string>
    <string name="btn_remove">Remove</string>
    <string name="call_from_pbx">PBX Call</string>
    <string name="call_on_hold">On hold</string>
    <string name="cf_busy">CF (BUSY)</string>
    <string name="cf_busy_noanswer">CF (BUSY/NO ANSWER)</string>
    <string name="chat_document">Document</string>
    <string name="chat_extension_title">Extension #%1$s</string>
    <string name="chat_name_ext_title">%1$s (#%2$s)</string>
    <string name="chat_no_groups">No group chats yet</string>
    <string name="chat_no_groups_desc">Create a new group to message your team instantly.</string>
    <string name="chat_preview_audio">🎙️ Voice message</string>
    <string name="chat_preview_new_message">Sent a new message.</string>
    <string name="chat_preview_photo">📷 Photo</string>
    <string name="chat_start_with_contact">Contact • Start chat (#%1$s)</string>
    <string name="chat_started">Chat started</string>
    <string name="chat_user_fallback">User</string>
    <string name="confirm_server_login">Sign in to the \"%1$s\" PBX?\n\nOnly confirm if you opened this link from an e-mail sent by your organization or from the QR code on your own screen.</string>
    <string name="confirm_server_replace_session">You are signed in as extension %1$s; that session is closed if this sign-in succeeds.</string>
    <string name="contact_role_company">Company</string>
    <string name="contact_role_device">Phone Contact</string>
    <string name="contact_unnamed">Unnamed</string>
    <string name="contacts_company_empty">No company extensions found.</string>
    <string name="contacts_no_match">No contact matches \'%1$s\'.</string>
    <string name="contacts_phone_empty">No phone contacts found, or contacts permission was not granted.</string>
    <string name="contacts_phone_listed">phone contacts listed</string>
    <string name="contacts_results_found">results found</string>
    <string name="crash_report_title">Error Report (Previous Crash)</string>
    <string name="delete_group_confirm">Are you sure you want to delete this group? It will be removed from every member\'s chat list.</string>
    <string name="device_info">Device: %1$s %2$s (Android %3$s, API %4$s)</string>
    <string name="edit_group_title">Edit Group Info</string>
    <string name="err_action_failed">Action failed: %1$s</string>
    <string name="err_browser">Could not open the browser: %1$s</string>
    <string name="err_camera_permission">Camera permission is needed to take a photo.</string>
    <string name="err_chat_create">Could not create the chat: %1$s</string>
    <string name="err_contacts_load">Could not load contacts: %1$s</string>
    <string name="err_delete">Could not delete: %1$s</string>
    <string name="err_enter_credentials">Please enter your username and password.</string>
    <string name="err_enter_extension">Please enter an extension number</string>
    <string name="err_enter_number">Please enter a number</string>
    <string name="err_enter_valid_number">Please enter a valid number</string>
    <string name="ui_all">All</string>
    <string name="ui_back">Back</string>
    <string name="ui_connected">Connected</string>
    <string name="ui_direct">Direct</string>
    <string name="ui_groups">Groups</string>
    <string name="ui_messages">Messages</string>
    <string name="ui_new_chat">New Chat</string>
    <string name="ui_new_group">New Group</string>
    <string name="ui_new_group_plus">+ New Group</string>
    <string name="ui_no_chats_desc">Pick a colleague from the directory or create a new group to start messaging.</string>
    <string name="ui_no_chats_yet">No chats yet</string>
    <string name="ui_search_chats_hint">Search chats or groups...</string>
</resources>